# nebus

./: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yml
alembic/: env.py
alembic/versions/: 2025_02_16_1449-de60fef89aa8_create_all_tables.py
src/: main.py
src/core/: config.py  constants.py  exceptions.py
src/core/models/: base.py  db_helper.py
src/dependencies/: building.py  organization.py  security.py
src/entities/: activity.py  base.py  building.py  organization.py
src/models/: __init__.py  activity.py  building.py  organization.py  organization_activity.py
src/repositories/: activity.py  base.py  building.py  organization.py
src/schemas/: activity.py  building.py  organization.py
src/services/: activity.py  building.py  organization.py
src/utils/: __init__.py  fill_random_data.py  haversine.py
src/views/: __init__.py
src/views/api/: __init__.py
src/views/api/v1/: building.py  common.py  organization.py
